# mbc

./: .dir-locals.el  .gitignore  Cargo.toml  flake.nix  setup.sh
.cargo/: config.toml
cmd/client/: Cargo.toml
cmd/client/src/: main.rs
cmd/server/: Cargo.toml
cmd/server/src/: main.rs
ebpf/client-xdp/: Cargo.toml
ebpf/client-xdp/src/: main.rs
ebpf/server-xdp/: Cargo.toml
ebpf/server-xdp/src/: main.rs
pkg/sender/: Cargo.toml  sender.rs
xtask/src/: build.rs  build_ebpf.rs  run.rs
